# agix-aos

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AI_POLICY.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
agents/: contributor-keys.registry.json
bench/: AGIX_AOS_ENDURANCE_EFFICIENCY_BENCHMARK_2026-07-03.md  COMPARATIVE_BENCHMARK_AOS_VS_CLAUDE.md  README.md  RESULTS_AOS_VS_CLAUDE_2026-06-18.md  agix-bench.mjs
cli/crates/lewis-aos-bus/: Cargo.toml
cli/crates/lewis-aos-bus/src/: main.rs
core/: .gitignore  Dockerfile  README.md  go.mod
docs/: DEVELOPMENT.md  README.md
fleet/: README.md  bunfig.toml  tsconfig.json
lib/: agix-agent-template.mjs  agix-audit-ledger.mjs  agix-brief-items.mjs  agix-bus-cli.mjs  agix-bus-provision.mjs  agix-bus.mjs  agix-director-queue.mjs  agix-dora.mjs  agix-efficiency-profile.mjs  agix-eval.mjs  agix-execution-state.mjs  agix-fanout.mjs  agix-fleet.mjs  agix-foundational-push-detector.mjs  agix-gate.mjs  agix-gbrain.mjs  agix-git.mjs  agix-google-auth.mjs  agix-identity.mjs  agix-ledger-cli.mjs  agix-mcp-client.mjs  agix-memory-store.mjs  agix-mentor-gate.mjs  agix-mentor.mjs  agix-model.mjs  agix-onboard.mjs  agix-policy.mjs  agix-runtime.mjs  agix-sdlc.mjs  agix-send.mjs  (+10 more)
services/api-python/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/api-python/app/: __init__.py  main.py
services/api-python/migrations/: 0001_contributor_keys.sql
(+510 files in other folders)
