[project]
name = "agix-api-python"
version = "0.1.0"
description = "Specialized Python services for Agix platform workloads."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0"
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
  "ruff>=0.6.0"
]
